--- a/MyShop/MyShop.csproj
+++ b/MyShop/MyShop.csproj
@@ -38,6 +38,6 @@
     <None Include="wwwroot\assets\js\addToBasket.js" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4js_4bootstrap_1bundle_1js_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
