Category view design for mobile, add horizontal view and vertical

--- a/MyShop/MyShop.csproj
+++ b/MyShop/MyShop.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Content Remove="wwwroot\assets\js\addToBasket.js" />
+    <Content Remove="wwwroot\assets\js\category.js" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,6 +38,7 @@
 
   <ItemGroup>
     <None Include="wwwroot\assets\js\addToBasket.js" />
+    <None Include="wwwroot\assets\js\category.js" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
