--- a/MyShop/MyShop.csproj
+++ b/MyShop/MyShop.csproj
@@ -39,6 +39,10 @@
     <None Include="wwwroot\assets\js\category.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\img\dropdowns\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
